2008-08-07  Moritz  <moritz@gnu.org>

	* TODO: Updated.

2008-08-04  Moritz  <moritz@gnu.org>

	* Makefile.am (SUBDIRS): Added po.

2008-08-04  Moritz  <moritz@gnu.org>

	* configure.ac: Removed checks for libusb (we use scdaemon!).

2008-08-03  Moritz  <moritz@gnu.org>

	* config.h.in: Added ENABLE_NLS symbol.

2008-08-03  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add config.rpath.
	* configure.ac (AC_CONFIG_FILES): Add po/Makefile.in.

2008-07-20  Moritz  <moritz@gnu.org>

	* configure.ac: Removed AC_DEFINE for jnlib
	(AC_OUTPUT): removed src/jnlib/Makefile, src/pam-test/Makefile;
	added tests/Makefile.

2008-05-24  Moritz  <moritz@gnu.org>

	Some build fixes related to Assuan (mostly correctings include paths in Makefile.am's).

2008-05-03  Moritz  <moritz@gnu.org>

	* configure.ac: Added tests for included libassuan.  Removed code
	for installed libassuan.

2008-04-05  Moritz  <moritz@gnu.org>

	* configure.ac: Renamed auth method simpledb to localdb.  Removed
	auth method test.  Adjust AC_CONFIG_FILES to new source tree
	layout.

2007-12-13  Moritz Schulte  <moritz@g10code.com>

	* configure.ac (AC_CONFIG_FILES): New: src/test/Makefile.

2007-11-11  Moritz  <moritz@g10code.com>

	* configure.ac: Add hardwired dirmngr path to AH_BOTTOM call.

2007-11-04  Moritz  <moritz@g10code.com>

	* configure.ac: AC_DEFINE ENABLE_AUTH_METHOD_SIMPLEDB if simpledb
	authentication is enabled.  Same for the new "test" authentication
	method.

2007-11-03  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: AC_DEFINE ENABLE_AUTH_METHOD_X509 if x509
	authentication is enabled.

2007-10-28  Moritz  <moritz@g10code.com>

	* Makefile.am (ACLOCAL_AMFLAGS): New.
	(SUBDIRS): Added: m4.

	* configure.ac (AC_CONFIG_FILES): Added src/dirmngr/Makefile.

2007-10-28  Moritz  <moritz@g10code.com>

	* configure.ac: Integrated KSBA support; call AM_PATH_KSBA.  Use
	POLDI_ENABLE_FEATURE macro for --enable-x509-auth and