@@ -1,5 +1,7 @@
                                                                 -*- outline -*-
 
-* initialization of libgcrypt secure memory: priviledge dropping
+* SCDaemon
   
-  causes problems with PAM (see comment in pam_poldi.c)
+  It seems there are still some problems in respect to
+  SCDaemon. Sometimes SCDaemon is confused and must be killed. Needs
+  to be fixed.
