@@ -1,3 +1,10 @@
+2008-08-08  Moritz  <moritz@gnu.org>
+
+	* EXPERIMENTAL: New file.
+	* Makefile.am (EXTRA_DIST): Updated.
+
+	* BUGS: Updated, mentioend scdaemon problems.
+
 2008-08-07  Moritz  <moritz@gnu.org>
 
 	* TODO: Updated.
